# xcron

./: .gitattributes  .gitignore  .xpack.yaml  AGENTS.md  README.md  SPEC.md  manifest  osl6egcbjojincaves3uhojat1abgave.darc  pyproject.toml
.beads/: .beads-credential-key  metadata.json
.docs/user/: CHEATSHEET.md
.qaman/: config.yaml
.xqa/: config.yaml
apps/: __init__.py
apps/cli/: __init__.py  common.py  main.py  output.py  parser.py  typer_app.py
apps/cli/commands/: __init__.py  _common.py  apply.py  hooks.py  inspect.py  jobs.py  plan.py  prune.py  status.py  validate.py
apps/cli/xcron_cli/: __init__.py  common.py  output.py
docs/dev/: architecture.md  go-rewrite-contract.md  logging.md  output.md
docs/dev/notes/: xcron-qaman-feedback-2026-04-09.md  xcron-qaman-pilot-retrospective-2026-04-09.md
docs/dev/plans/: logging.md  xcron-axi-cli-compliance.md  xcron-axi-hardening-dx-refactor.md  xcron-job-cli-management.md  xcron-jobs-cli-edge-fixes.md  xcron-qaman-pilot.md  (+5 more)
docs/user/: README.md
libs/: __init__.py
libs/actions/: README.md  __init__.py  apply_project.py  init_home.py  inspect_job.py  manage_jobs.py  manage_logs.py  metrics.py  plan_project.py  prune_project.py  status_project.py  validate_project.py
libs/domain/: README.md  __init__.py  diffing.py  models.py  normalization.py
libs/infra/: README.md  __init__.py
libs/services/: README.md  __init__.py  axi_presenter.py  claude_hooks.py  cli_contracts.py  cli_mappers.py  cli_responses.py  codex_hooks.py  config_loader.py  hash_service.py  help_renderer.py  hook_installer.py  hook_paths.py  logging_config.py  logging_paths.py  manifest_editor.py  metrics.py  observability.py  output_renderer.py  schema_validator.py  state_store.py  tmux_renderer.py  toon_renderer.py  wrapper_renderer.py
research/axi-refactoring/: xcron-axi-refactoring-lessons-2026-04-10.md
research/axi-retrospective/: xcron-axi-retrospective-2026-04-10.md
resources/: __init__.py
resources/help/: __init__.py  apply.md  inspect.md  plan.md  prune.md  root.md  status.md  validate.md
resources/logging/: __init__.py  default.yaml
resources/schemas/: __init__.py  schedules.schema.yaml
resources/skill/: SKILL.md
resources/templates/: axi-cli-test.py.tmpl  axi-command-help.md  axi-command-shell.py.tmpl
scripts/: verify-core.sh
tests/: cli_assertions.py  conftest.py  test_axi_presenter.py  test_cli_apply.py  test_cli_contracts.py  test_cli_home.py  test_cli_hooks.py  test_cli_inspect.py  test_cli_jobs.py  test_cli_logs.py  test_cli_mappers.py  test_cli_metrics.py  test_cli_output.py  test_cli_parser.py  test_cli_status.py  test_cli_tmux_output.py  test_cron_backend.py  test_hash_service.py  test_help_renderer.py  test_hook_installer.py  test_init_home.py  test_inspect_action.py  test_job_actions.py  test_launchd_backend.py  test_manifest_editor.py  test_observability.py  test_planning.py  test_status_projection.py  test_tmux_renderer.py  test_toon_renderer.py  test_typer_cli.py  test_validation.py  test_wrapper_renderer.py
tests/integration/: README.md  cron_real_it.py  launchd_real_it.py  run_cron_it.sh
(+22 files in other folders)
