[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "xcron"
version = "0.1.0"
description = "Per-project schedule reconciliation prototype for native OS schedulers"
readme = "SPEC.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [
  { name = "Dariusz Debowczyk" }
]
dependencies = [
  "PyYAML>=6.0,<7.0",
  "jsonschema>=4.23,<5.0",
  "pydantic>=2.12.5",
  "python-toon>=0.1.3",
  "rich>=14.3.3",
  "structlog>=24.0,<26.0",
  "typer>=0.23.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
xcron = "apps.cli.typer_app:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "libs*", "resources*"]

[tool.setuptools.package-data]
"resources.help" = ["*.md", "jobs/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
