[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "xcron"
version = "0.1.0"
description = "Per-project schedule reconciliation prototype for native OS schedulers"
readme = "SPEC.md"
requires-python = ">=3.9"
license = "LicenseRef-Proprietary"
authors = [
  { name = "Dariusz Debowczyk" }
]
dependencies = [
  "PyYAML>=6.0,<7.0",
  "jsonschema>=4.23,<5.0",
  "pydantic>=2.12.5",
  "python-toon>=0.1.3",
  "rich>=14.3.3",
  "structlog>=24.0,<26.0",
  "typer>=0.23.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
xcron = "xcron_cli.typer_app:run"

[tool.setuptools]
include-package-data = true
packages = [
  "xcron_cli",
  "xcron_libs",
  "xcron_libs.actions",
  "xcron_libs.domain",
  "xcron_libs.infra",
  "xcron_libs.services",
  "xcron_libs.services.backends",
  "xcron_resources",
  "xcron_resources.help",
  "xcron_resources.help.jobs",
  "xcron_resources.logging",
  "xcron_resources.schemas",
]

[tool.setuptools.package-dir]
xcron_cli = "apps/cli/xcron_cli"
xcron_libs = "libs"
xcron_resources = "resources"

[tool.setuptools.package-data]
"xcron_resources.help" = ["*.md", "jobs/*.md"]
"xcron_resources.help.jobs" = ["*.md"]
"xcron_resources.logging" = ["*.yaml"]
"xcron_resources.schemas" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
